[tool.poetry]
name = "tweepy-tools"
version = "0.1.0"
description = "Tweepy tools for multiple scenarios"
authors = ["Cesar Cotiz <cotizcesar@gmail.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "tweepy_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
